--- a/app/src/main/res/layout/activity_section_f1_s1.xml
+++ b/app/src/main/res/layout/activity_section_f1_s1.xml
@@ -26,7 +26,7 @@
             android:theme="@style/CustomToolbarTheme"
             app:popupTheme="@style/CustomPopupTheme"
             app:subtitleTextAppearance="@style/Toolbar.SubtitleText"
-            app:title="@string/f2title"
+            app:title="@string/f1sec1"
             app:titleTextAppearance="@style/Toolbar.TitleText" />
 
         <ScrollView
@@ -119,11 +119,13 @@
                         <RadioGroup
                             android:id="@+id/f1102"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
 
                             <RadioButton
                                 android:id="@+id/f110201"
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
                                 android:layout_height="wrap_content"
                                 android:checked="@{form.f1102.equals(`1`)}"
                                 android:onClick="@{()->form.setF1102(`1`)}"
@@ -131,7 +133,8 @@
 
                             <RadioButton
                                 android:id="@+id/f110202"
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
                                 android:layout_height="wrap_content"
                                 android:checked="@{form.f1102.equals(`2`)}"
                                 android:onClick="@{()->form.setF1102(`2`)}"
@@ -258,7 +261,7 @@
                 </androidx.cardview.widget.CardView>
 
                 <!-- f1103  Input   -->
-                <androidx.cardview.widget.CardView
+                <!--<androidx.cardview.widget.CardView
                     android:id="@+id/fldGrpCVf1103"
                     style="@style/cardView">
 
@@ -294,7 +297,7 @@
                             android:hint="@string/f1103"
                             android:text="@={form.f1103}" />
                     </LinearLayout>
-                </androidx.cardview.widget.CardView>
+                </androidx.cardview.widget.CardView>-->
 
                 <!-- f1107  Input   -->
                 <androidx.cardview.widget.CardView
@@ -411,7 +414,7 @@
                             android:id="@+id/f1109"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:digits="AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZz0123456789,. "
+                            android:digits="AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZz"
                             android:hint="@string/f1109"
                             android:text="@={form.f1109}" />
                     </LinearLayout>
@@ -461,7 +464,7 @@
                 </androidx.cardview.widget.CardView>
 
                 <!-- f1111  Input   -->
-                <androidx.cardview.widget.CardView
+                <!--<androidx.cardview.widget.CardView
                     android:id="@+id/fldGrpCVf1111"
                     style="@style/cardView">
 
@@ -497,7 +500,7 @@
                             android:hint="@string/f1111"
                             android:text="@={form.f1111}" />
                     </LinearLayout>
-                </androidx.cardview.widget.CardView>
+                </androidx.cardview.widget.CardView>-->
 
                 <!-- f1112  Input   -->
                 <androidx.cardview.widget.CardView
